--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ I completed my PhD at the <a href="https://physics-astronomy.unibo.it/en"> Unive
 												<p>5 invited conference talks</p>
 											</div>
 										</article>
-										<article>
+									<!--	<article>
 											<span class="icon solid fa-rocket"></span>
 											<div class="content">
 												<h3>Quam lorem ipsum</h3>
@@ -94,7 +94,7 @@ I completed my PhD at the <a href="https://physics-astronomy.unibo.it/en"> Unive
 												<h3>Sed magna finibus</h3>
 												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 											</div>
-										</article>
+										</article> -->
 									</div>
 								</section>
 
