--- a/pubblications.html
+++ b/pubblications.html
@@ -42,7 +42,7 @@
 									<header class="main">
 										<h1>Publications</h1>
 									</header>
-									<p> Below you can find my 1st author papers while for all the publications follow <a href="https://ui.adsabs.harvard.edu/search/q=%20%20author%3A%22%5Elacchin%2Ce.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"> this link </a>.
+									<p> Below you can find my 1st author papers. For all the publications follow <a href="https://ui.adsabs.harvard.edu/search/q=%20%20author%3A%22%5Elacchin%2Ce.%22&sort=date%20desc%2C%20bibcode%20desc&p_=0"> this link </a>.
 									<p> 
 									 ORCID:<a href="https://orcid.org/0000-0001-9936-0126"> 0000-0001-9936-0126 </a>
 	
