added thesis and awards

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ I completed my PhD at the <a href="https://physics-astronomy.unibo.it/en"> Unive
 											<span class="icon solid fa-desktop"></span>
 											<div class="content">
 												<h3>High-Performance Computing Proposals</h3>
-												<p>Principal investigator of 4 computational proposals on different supercomputers for a total of 17M core/hours</p>
+												<p>Principal investigator of 4 computational proposals on different supercomputers for a total of 17M core/hours, among which an <a href=https://eurohpc-ju.europa.eu/access-our-supercomputers/awarded-projects/towards-holistic-view-origin-multiple-stellar-populations-globular-clusters_en> EuroHPC JU </a> proposal.</p>
 											</div>
 										</article>
 										<article>
@@ -134,8 +134,11 @@ I completed my PhD at the <a href="https://physics-astronomy.unibo.it/en"> Unive
 										</li>
 										-->
 										<li><a href="CV_Lacchin.pdf">Curriculum Vitae</a></li>
+										<li><a href="Thesis_Lacchin.pdf">PhD thesis</a></li>
+										<li><a href="awards.html">Awards</a></li>
 										<li><a href="contacts.html">Contacts</a></li>
 										<li><a href="more.html">More</a></li>
+										
 									</ul>
 								</nav>
 
