corrct sidebar and added details on publications

--- a/more.html
+++ b/more.html
@@ -41,57 +41,56 @@
 									<header class="main">
 										<h1>Besides astrophysics</h1>
 									</header>
-									 <div class="fontsize28 bold-text ">
+									<div class="fontsize28 bold-text ">
 									   I'm a keen hiker...
-									 </div>
+									</div>
 									<span class="image main"><img src="images/pelmo.jpeg" alt="" /></span>
 									<div class="image-container">
-									<div class="column">
-									<span class="image main"><img src="images/campanile.jpg" alt="" /></span>
-									<span class="image main"><img src="images/mucche.jpeg" alt="" /></span>
-									</div>
-									<div class="column">
-									<span class="image main"><img src="images/barcislake.jpeg" alt="" /></span>
-									<span class="image main"><img src="images/tree_snow.jpeg" alt="" /></span>
-									</div>
+										<div class="column">
+										<span class="image main"><img src="images/campanile.jpg" alt="" /></span>
+										<span class="image main"><img src="images/mucche.jpeg" alt="" /></span>
+										</div>
+										<div class="column">
+											<span class="image main"><img src="images/barcislake.jpeg" alt="" /></span>
+											<span class="image main"><img src="images/tree_snow.jpeg" alt="" /></span>
+										</div>
 									</div>
 									<span class="image main"><img src="images/pralongia.jpg" alt="" /></span>
 									<div class="image-container">
-									<div class="column">
-									<span class="image main"><img src="images/alpbach.jpeg" alt="" /></span>
-									<span class="image main"><img src="images/pelmo_neve.jpg" alt="" /></span>
-									</div>
-									<div class="column">
-									<span class="image main"><img src="images/neve.jpeg" alt="" /></span>
-									<span class="image main"><img src="images/braies.jpg" alt="" /></span>
-									</div>
+										<div class="column">
+											<span class="image main"><img src="images/alpbach.jpeg" alt="" /></span>
+											<span class="image main"><img src="images/pelmo_neve.jpg" alt="" /></span>
+										</div>
+										<div class="column">
+											<span class="image main"><img src="images/neve.jpeg" alt="" /></span>
+											<span class="image main"><img src="images/braies.jpg" alt="" /></span>
+										</div>
 									</div>
 									<span class="image main"><img src="images/nuvolau.jpg" alt="" /></span>
 									<br>
 									<br>
 									<div class="fontsize28 bold-text ">
 									  ... and a cat lover
-									 </div>
+									</div>
 									<br>
 									<div class="image-container">
-									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.37.41.jpeg" alt="" /></span>
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.50.jpeg" alt="" /></span>
-									</div>
-									<div class="column">
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.54.jpeg" alt="" /></span>
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.41.jpeg" alt="" /></span>
-									</div>
+										<div class="column">
+									  		<span class="image main"><img src="images/photo_2021-12-25 00.37.41.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.50.jpeg" alt="" /></span>
+										</div>
+										<div class="column">
+									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.54.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.41.jpeg" alt="" /></span>
+										</div>
 									</div>
 								
 									<div class="image-container">
-									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.53.45.jpeg" alt="" /></span>
-									</div>
-									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.53.49.jpeg" alt="" /></span>
-									</div>
-
+										<div class="column">
+									 		<span class="image main"><img src="images/photo_2021-12-25 00.53.45.jpeg" alt="" /></span>
+										</div>
+										<div class="column">
+									  		<span class="image main"><img src="images/photo_2021-12-25 00.53.49.jpeg" alt="" /></span>
+										</div>
 									</div>
 
 
@@ -131,6 +130,8 @@
 										</li>
 										-->
 										<li><a href="CV_Lacchin.pdf">Curriculum Vitae</a></li>
+										<li><a href="Thesis_Lacchin.pdf">PhD thesis</a></li>
+										<li><a href="awards.html">Awards</a></li>
 										<li><a href="contacts.html">Contacts</a></li>
 										<li><a href="more.html">More</a></li>
 									</ul>
