--- a/contacts.html
+++ b/contacts.html
@@ -105,6 +105,8 @@
 										</li>
 										-->
 										<li><a href="CV_Lacchin.pdf">Curriculum Vitae</a></li>
+										<li><a href="Thesis_Lacchin.pdf">PhD thesis</a></li>
+										<li><a href="awards.html">Awards</a></li>
 										<li><a href="contacts.html">Contacts</a></li>
 										<li><a href="more.html">More</a></li>
 									</ul>
