--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
   <head>
     <script src="https://kit.fontawesome.com/42c9926805.js" crossorigin="anonymous"></script>
-		<title>Editorial by HTML5 UP</title>
+		<title>Home</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
