--- a/pubblications.html
+++ b/pubblications.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/mountain_color.jpg">
 		<style>
 			.bottom-one {
 				margin-bottom: 1cm;
@@ -75,7 +76,7 @@ A&A, 681, 45</a><br>
 									  
 									<p class="bottom-one">
 									</p>
-									
+
 									<div class="row">
 									 	 <div class="col-6 col-12-medium centered-vertically">
 
