--- a/more.html
+++ b/more.html
@@ -76,21 +76,21 @@
 									<br>
 									<div class="image-container">
 										<div class="column">
-									  		<span class="image main"><img src="images/photo_2021-12-25 00.37.41.jpeg" alt="" /></span>
-									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.50.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/cat1.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/cat6.jpeg" alt="" /></span>
 										</div>
 										<div class="column">
-									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.54.jpeg" alt="" /></span>
-									  		<span class="image main"><img src="images/photo_2022-11-12 12.21.41.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/cat5.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/cat4.jpeg" alt="" /></span>
 										</div>
 									</div>
 								
 									<div class="image-container">
 										<div class="column">
-									 		<span class="image main"><img src="images/photo_2021-12-25 00.53.45.jpeg" alt="" /></span>
+									 		<span class="image main"><img src="images/cat2.jpeg" alt="" /></span>
 										</div>
 										<div class="column">
-									  		<span class="image main"><img src="images/photo_2021-12-25 00.53.49.jpeg" alt="" /></span>
+									  		<span class="image main"><img src="images/cat3.jpeg" alt="" /></span>
 										</div>
 									</div>
 
