--- a/awards.html
+++ b/awards.html
@@ -56,7 +56,7 @@
 									    	<div class="fontsize18 normal-text ">
 									     	 My PhD thesis has been awarded the <b>"Christine Vandemoortele for research" Prize </b> by the Deparment of Physics and Astronomy of the University of Bologna.
 											</br>
-									      	My thesis is aimed at deepeing our understanding of the formation and evolution of multiple stellar populations in globular clusters, by means of sofisticted 3D numerical simulations.
+									      	My thesis is aimed at deepeing our understanding of the formation and evolution of multiple stellar populations in globular clusters, by means of sofisticated 3D numerical simulations.
 											In particular, I studied the effects of various physical processes such as cluster rotation and Type Ia supernovae on the formation of the second, and chemically peculiar, population. 
 									    	</div> 
 									  	</div>
@@ -205,7 +205,7 @@
 
 									    	<div class="fontsize18 normal-text ">
 									      	During my PhD, I was awarded the <b>MARCOPOLO grant</b>  by the University of Bologna to spend three months at the Observatoire de Paris, where I conducted my research with Alessandra Mastobuono-Battisti.
-											I exploited N-Body simualations to study the possibility for a massive globular cluster composed of two generations of stars to lose most of its mass, to recall the present-day features.
+											I exploited N-Body simulations to study the possibility for a massive globular cluster composed of two generations of stars to lose most of its mass, to recall the present-day features.
 										</div> 
 									  	</div>
 										<div class="col-image" style="flex: 30%; display: flex; justify-content: center; align-items: center;"> 
