--- a/pubblications.html
+++ b/pubblications.html
@@ -68,7 +68,8 @@
 A&A, 681, 45</a><br>
 												<br>
 												<div class="fontsize15 normal-text">
-												The paper shows that a globular cluster composed of two generations of stars can lose more than 90% of their stars. Assuming an extended first generation and a low mass second generation, it is possible to match the mass, radius and fraction of second generation stars of observed globular clusters. In the figure, the cluster with the tidal tails created by the interaction with the Milky Way is shown. Most of the stars that are lost at this time are first generation stars, as they are initial less bound to the cluster.
+												The paper shows that a globular cluster composed of two generations of stars can lose more than 90% of their stars. Assuming an extended first generation and a low mass second generation, it is possible to match the mass, radius and fraction of second generation stars of observed globular clusters. 
+												Shown in the figure is the cluster with the tidal tails created by its interaction with the Milky Way. Most of the stars that are lost at this time are first generation stars, as they are initial less bound to the cluster.
 												</div>
 									      	</div> 
 									    </div>
@@ -88,7 +89,7 @@ A&A, 681, 45</a><br>
 													<br>
 													<br>
 													<div class="fontsize15 normal-text">
-													The work shows that once we assume that first generation (FG) stars are rotating around the cluster centre, second generation (SG) stars, which are formed out of the first generation' ejecta plus external gas, are rotating much faster. Moreover, the second generation helium-enriched stars are orbiting the centre much faster than the helium poor-ones, in agreement with observations. Helium rich stars are formed mainly out of rotating first generation' ejecta, while helium-poor ones are maily recycling external gas. 
+													The work shows that once we assume that first generation (FG) stars are rotating around the cluster centre, second generation (SG) stars, which are formed out of the first generation' ejecta plus external gas, are rotating much faster. Moreover, the second generation helium-enriched stars are orbiting the centre much faster than the helium poor-ones, in agreement with observations. This because helium rich stars are formed mainly out of rotating first generation' ejecta, while helium-poor ones are maily recycling external gas. 
 													In the figure, Y indicates the helium mass fraction of SG stars. The velocity components of the various subgroups of the SG are displayed with yellow lines indicating the slowly rotating helium-poor SG and the green the fast-rotating helium-rich SG.	
 													</div>
 									      		</div> 
@@ -124,7 +125,7 @@ A&A, 681, 45</a><br>
 													<br>
 													<br>
 													<div class="fontsize15 normal-text">
-														The study highlights that Type Ia supernovae are not efficient in quenching the star formation, as previously thought and that their explosions are significantly limiting the dilution of asymptotic giant branch stars ejecta with pristine gas, which is instead essential to reproduce the chemical composition of globular cluster' stars.
+														The study highlights that Type Ia supernovae are not efficient in quenching the star formation, as previously thought, and that their explosions are significantly limiting the dilution of asymptotic giant branch stars ejecta with pristine gas, which is instead essential to reproduce the chemical composition of globular cluster' stars.
 														The figure shows the evolution of the density and temperature maps for one of the models. Type Ia supernova explosions are producing hot and rarefied bubbles that are expanding, limiting the star formation (new stars are displayed as white dots), which is happening in high density and cold regions. 
 													</div>
 									      		</div> 
@@ -146,7 +147,7 @@ A&A, 681, 45</a><br>
 													<br>
 													<div class="fontsize15 normal-text">
 													In this paper, the more realistic Integrated Galactic Initial Mass Function (IGIMF) is found to predict too few massive stars at the metallicities and star fromation rates of ultrafaint dwarf galaxies with respect to canonical Salpeter initial mass function.
-													This implies that the models including the IGIMF are not able to reproduce the chemcial patterns observed in ultrafaint dwarf galaxies. The figure highlights the differences between the models, IGIMF in ble and Salpeter in red, with the observational data shown with their error bars. Different colors are corresponding to different data samples.  
+													This implies that the models including the IGIMF are not able to reproduce the chemical patterns observed in ultrafaint dwarf galaxies. The figure highlights the differences between the models, the IGIMF in blue and Salpeter in red, with the observational data shown with their error bars (different colors are corresponding to different data samples).  
 													</div>
 									      		</div> 
 									    	</div>
