--- a/more.html
+++ b/more.html
@@ -10,6 +10,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="icon" type="image/png" href="images/mountain_color.jpg">
+		
 	</head>
 	<body class="is-preload">
 
@@ -75,21 +77,21 @@
 									<br>
 									<div class="image-container">
 									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.37.41.jpeg" alt="" /></span>
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.50.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat1.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat6.jpeg" alt="" /></span>
 									</div>
 									<div class="column">
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.54.jpeg" alt="" /></span>
-									  <span class="image main"><img src="images/photo_2022-11-12 12.21.41.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat5.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat4.jpeg" alt="" /></span>
 									</div>
 									</div>
 								
 									<div class="image-container">
 									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.53.45.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat2.jpeg" alt="" /></span>
 									</div>
 									<div class="column">
-									  <span class="image main"><img src="images/photo_2021-12-25 00.53.49.jpeg" alt="" /></span>
+									  <span class="image main"><img src="images/cat3.jpeg" alt="" /></span>
 									</div>
 
 									</div>
@@ -131,6 +133,8 @@
 										</li>
 										-->
 										<li><a href="CV_Lacchin.pdf">Curriculum Vitae</a></li>
+										<li><a href="Thesis_Lacchin.pdf">PhD thesis</a></li>
+										<li><a href="awards.html">Awards</a></li>
 										<li><a href="contacts.html">Contacts</a></li>
 										<li><a href="more.html">More</a></li>
 									</ul>
